--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Yatir Biton Portofolio<br />
 						</h1>
-						<p> Business Analyst skilled in Excel, SQL, R, Python, PowerBI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
+						<p> Business Analyst skilled in Excel, SQL, R, Python, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
 						<p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portofolio</a>
+						<a href="index.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
