--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 										<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix">Marketing analysis in power bi<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="image fit"><img src="images/PowerBi.jpg" alt="" /></a>
+									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="image fit"><img src="images/PowerBI.jpg" alt="" /></a>
 									<p>In this project, I conduct an analysis of the performance of the marketing team and try to find insights for improvement.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="button">View Project</a></li>
