--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 
 				<!-- Main -->
 					<div id="main">
+						
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
+									</a></h2>
+									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
+								</header>
+								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/nashville.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="button large">View Project</a></li>
+								</ul>
+							</article>
 
 						<!-- Featured Post -->
 							<article class="post featured">
@@ -70,7 +83,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jfif" alt="" /></a>
-									<p>In this project, I use SQL Server to explore global COVID-19 data.</p>
+									<p>Using SQL Server to explore global COVID-19 data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="button">View Project</a></li>
 									</ul>
@@ -92,7 +105,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
-									<p>In this project, I look at what variables affect the large revenue from movies.</p>
+									<p>Looking at what variables affect the large revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -110,11 +123,11 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx">Sales Analysis in excel<br />
+										<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx">Sales Analysis in Excel<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="image fit"><img src="images/excel.png" alt="" /></a>
-									<p>In this project, I look at different products and conduct analysis to gain insights.</p>
+									<p>Looking at different products and conduct analysis to gain insights.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="button">View Project</a></li>
 									</ul>
@@ -125,7 +138,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="image fit"><img src="images/PowerBI.jpg" alt="" /></a>
-									<p>In this project, I conduct an analysis of the performance of the marketing team and try to find insights for improvement.</p>
+									<p>Conducting an analysis of the performance of the marketing team and try to find insights for improvement.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="button">View Project</a></li>
 									</ul>
