--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									</a></h2>
 									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
 								</header>
-								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/nashville.jpg" alt="" /></a>
+								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="button large">View Project</a></li>
 								</ul>
