--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
 									</a></h2>
-									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
+									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months' worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
 								</header>
 								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -94,7 +94,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/yatir.biton8515?authMode=activationSuccess" class="image fit"><img src="images/Tableau.webp" alt="" /></a>
-									<p>My all of my Tableau Dashboards.</p>
+									<p>My Tableau Dashboards.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/yatir.biton8515?authMode=activationSuccess" class="button">View Project</a></li>
 									</ul>
@@ -105,7 +105,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
-									<p>Looking at what variables affect the large revenue from movies.</p>
+									<p>Using Pandas, Matplotlib and Seaborn for looking at what variables affect the large revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -127,7 +127,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="image fit"><img src="images/excel.png" alt="" /></a>
-									<p>Looking at different products and conduct analysis to gain insights.</p>
+									<p>Looking at different products and conduct analysis to gain insights including a dashboard.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="button">View Project</a></li>
 									</ul>
