--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="image fit"><img src="images/excel.png" alt="" /></a>
-									<p>Looking at different products and conduct analysis to gain insights including a dashboard.</p>
+									<p>Looking at different products and conducting analysis to gain insights, including a dashboard..</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="button">View Project</a></li>
 									</ul>
