--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="image fit"><img src="images/PowerBI.jpg" alt="" /></a>
-									<p>Conducting an analysis of the performance of the marketing team and try to find insights for improvement.</p>
+									<p>Conducting an analysis of the performance of the marketing team and trying to find insights for improvement.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="button">View Project</a></li>
 									</ul>
