--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Yatir Biton Portofolio<br />
 						</h1>
-						<p> Business Analyst skilled in Excel, SQL, R, Python, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
+						<p> Data Analyst skilled in Python, SQL, R, Excel, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
 						<p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -52,7 +52,20 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python (Jan. 23')<br />
+									</a></h2>
+									<p>Using Pandas, Numpy, Seaborn, and Matplotlib in order to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
+								</header>
+								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="button large">View Project</a></li>
+								</ul>
+							</article>
+						
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python (Oct. 22')<br />
 									</a></h2>
 									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months' worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
 								</header>
