--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 									</a></h2>
 									<p>Using Pandas, Numpy, Seaborn, and Matplotlib in order to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
 								</header>
-								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
+								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Feb_23.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jfif" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Feb_23.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 						
