--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python (Jan. 23')<br />
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
 									</a></h2>
-									<p>Using Pandas, Numpy, Seaborn, and Matplotlib in order to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
+									<p>Jan. 23' - Using Pandas, Numpy, Seaborn, and Matplotlib in order to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
 								</header>
 								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Feb_23.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jfif" alt="" /></a>
 								<ul class="actions special">
@@ -65,9 +65,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python (Oct. 22')<br />
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
 									</a></h2>
-									<p>Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months' worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
+									<p>Oct. 22' - Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months' worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
 								</header>
 								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
 								<ul class="actions special">
