--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Yatir Biton Portofolio<br />
+						<h1>Yatir Bitan Portofolio<br />
 						</h1>
 						<p> Data Analyst skilled in Python, SQL, R, Excel, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
 						<p>
@@ -40,7 +40,7 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/yatir-biton-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						</ul>
@@ -180,7 +180,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/yatir-biton-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/Yatir1990" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
