--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Yatir Bitan Portofolio<br />
 						</h1>
-						<p> Data Analyst skilled in Python, SQL, R, Excel, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-biton-7299481b3/">@YatirBiton</a> 
+						<p> Data Analyst skilled in Python, SQL, R, Excel, Power BI, and Tableau.	<a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a> 
 						<p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -54,7 +54,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
 									</a></h2>
-									<p>Jan. 23' - Using Pandas, Numpy, Seaborn, and Matplotlib in order to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
+									<p>Jan. 23' - Using Pandas, Numpy, Seaborn, and Matplotlib to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
 								</header>
 								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Jan_23.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jpg" alt="" /></a>
 								<ul class="actions special">
@@ -80,7 +80,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
 									</a></h2>
-									<p>Oct. 22' - Using Python Pandas & Python Matplotlib to analyze and answer business questions about 12 months' worth of sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
+									<p>Oct. 22' - Using Pandas & Matplotlib to analyze and answer business questions about 12 months' sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
 								</header>
 								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -118,7 +118,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
-									<p>Using Pandas, Matplotlib and Seaborn for looking at what variables affect the large revenue from movies.</p>
+									<p>Using Pandas, Matplotlib and Seaborn to look at what variables affect the large revenue from movies.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -140,7 +140,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="image fit"><img src="images/excel.png" alt="" /></a>
-									<p>Looking at different products and conducting analysis to gain insights, including a dashboard..</p>
+									<p>Looking at different products and analyzing to gain insights, including a dashboard..</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Excel%20Data%20Sales%20Analysis.xlsx" class="button">View Project</a></li>
 									</ul>
@@ -151,7 +151,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="image fit"><img src="images/PowerBI.jpg" alt="" /></a>
-									<p>Conducting an analysis of the performance of the marketing team and trying to find insights for improvement.</p>
+									<p>Conducting an analysis of the marketing team's performance and trying to find insights for improvement.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Marketing%20analysis%20Project.pbix" class="button">View Project</a></li>
 									</ul>
@@ -175,7 +175,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">biton.yatir@gmail.com</a></p>
+								<p><a href="#">yatir20@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
