--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Yatir Bitan Portofolio<br />
+						<h1>Portofolio - Yatir Bitan<br />
 						</h1>
-						<p> Data Analyst skilled in Python, SQL, R, Excel, Power BI, and Tableau. <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a> 
+						<p> I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. <a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a> 
 						<p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -52,13 +52,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python<br />
+									<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis<br />
 									</a></h2>
-									<p>Jan. 23' - Using Pandas, Numpy, Seaborn, and Matplotlib to answer business questions. In this project, I used different approaches and new codes that I learned.</p>
+									<p>Jan. 23' - This project involves analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
 								</header>
-								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Jan_23.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jpg" alt="" /></a>
+								<a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales_Analysis_Jan_23.ipynb" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="button large">View Project</a></li>
 								</ul>
 							</article>
 						
