--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis</a></h2>
 						<p>This project involves analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
 					</header>
-					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/Sales Analysis in Python (Jan. 23').jpg" alt="Market Basket Analysis"></a>
+					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/cover_image.jpg" alt="Market Basket Analysis"></a>
 					<ul class="actions special">
 						<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="button large">View Project</a></li>
 					</ul>
