--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql">Data Cleaning in SQL</a></h2>
-						<p>In this project, I took raw housing data from Nashville and transformed it into SQL Server to make it more usable for analysis.</p>
+						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql">Data Preprocessing</a></h2>
+						<p>IProcessing raw housing data from Nashville by cleaning and transforming it into a structured format in SQL Server. This transformation involved organizing and standardizing the data to enhance its usability for comprehensive analysis and insights.</p>
 					</header>
 					<a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="image main"><img src="images/nashville.jpg" alt="Data Cleaning in SQL"></a>
 					<ul class="actions special">
@@ -75,8 +75,8 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis in Python</a></h2>
-						<p>Using Pandas & Matplotlib to analyze and answer business questions about 12 months' sales data. The data contains hundreds of thousands of electronics store purchases broken down by month, product type, cost, purchase address, etc.</p>
+						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis</a></h2>
+						<p>Analyzing and addressing business inquiries using Pandas and Matplotlib with 12 months' worth of sales data from an electronics store. The dataset includes detailed records of purchases categorized by month, product type, cost, purchase address, and more.</p>
 					</header>
 					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="Sales Analysis in Python"></a>
 					<ul class="actions special">
@@ -91,7 +91,7 @@
 							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql">COVID 19 Data Exploration</a></h2>
 						</header>
 						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="image fit"><img src="images/covid.jfif" alt="COVID 19 Data Exploration"></a>
-						<p>Using SQL Server to explore global COVID-19 data.</p>
+						<p>Utilizing SQL Server to delve into comprehensive global COVID-19 data, examining trends, patterns, and insights to aid in understanding the pandemic's impact across different regions and populations. This exploration involves querying and analyzing vast datasets to uncover valuable epidemiological and public health insights.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="button">View Project</a></li>
 						</ul>
@@ -101,17 +101,17 @@
 							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb">Movie Correlation</a></h2>
 						</header>
 						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="image fit"><img src="images/movies.jpg" alt="Movie Correlation"></a>
-						<p>Using Pandas, Matplotlib and Seaborn to look at what variables affect the large revenue from movies.</p>
+						<p>Employing Pandas, Matplotlib, and Seaborn to conduct a detailed analysis of factors influencing substantial revenue in the movie industry. This involves examining variables such as genre, budget, marketing spend, release timing, and critical acclaim to identify correlations and trends that drive box office success and inform strategic decisions in film production and distribution.</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 						</ul>
 					</article>
 					<article>
 						<header>
-							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd">Bike Sharing Project</a></h2>
+							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd">Bike Sharing data Analysis</a></h2>
 						</header>
 						<a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="image fit"><img src="images/Bicycle.jpg" alt="Bike Sharing Project"></a>
-						<p>This project includes analysis processes, visualizations, insights, and recommendations for the marketing team and stakeholders.</p>
+						<p>Offering a thorough analysis, visualizations, actionable insights, and strategic recommendations customized for the marketing team and stakeholders. By leveraging data-driven approaches, it ensures alignment with business objectives and maximizes return on investment (ROI).</p>
 						<ul class="actions special">
 							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd" class="button">View Project</a></li>
 						</ul>
