--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<article class="post featured">
 					<header class="major">
 						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb">Market Basket Analysis</a></h2>
-						<p>This project involves analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
+						<p>Analyzing a retail company's randomized sales data to uncover purchasing patterns and associations between frequently bought products using data preprocessing, feature engineering, and market basket analysis techniques, including the FP-Growth algorithm. The insights derived from this analysis aim to optimize product placement and promotions, ultimately enhancing sales strategy and customer satisfaction.</p>
 					</header>
 					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Market_Basket_Analysis.ipynb" class="image main"><img src="images/cover_image.jpg" alt="Market Basket Analysis"></a>
 					<ul class="actions special">
@@ -64,7 +64,7 @@
 				<article class="post featured">
 					<header class="major">
 						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql">Data Preprocessing</a></h2>
-						<p>IProcessing raw housing data from Nashville by cleaning and transforming it into a structured format in SQL Server. This transformation involved organizing and standardizing the data to enhance its usability for comprehensive analysis and insights.</p>
+						<p>Processing raw housing data from Nashville by cleaning and transforming it into a structured format in SQL Server. This transformation involved organizing and standardizing the data to enhance its usability for comprehensive analysis and insights.</p>
 					</header>
 					<a href="https://github.com/Yatir1990/Portfolio/blob/main/NashvilleHousing%20ETL%20project.sql" class="image main"><img src="images/nashville.jpg" alt="Data Cleaning in SQL"></a>
 					<ul class="actions special">
