--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<!-- Intro -->
 			<div id="intro">
-				<h1>Portfolio - Yatir Bitan</h1>
+				<h1>My Portfolio</h1>
 				<p>
 					I am currently pursuing a Master's degree in Economics and Business Analytics at Johannes Kepler Universität Linz. Driven by a strong passion for coding and continuous learning, I leverage my analytical skills and data analyst experience to transform data into actionable insights. I thrive as an effective team player with excellent communication skills, always ready to collaborate and contribute enthusiastically. 
 					<a href="https://www.linkedin.com/in/yatir-bitan-7299481b3/">@YatirBitan</a>
