--- a/index.html
+++ b/index.html
@@ -73,18 +73,6 @@
 				</article>
 
 				<!-- Featured Post -->
-				<article class="post featured">
-					<header class="major">
-						<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb">Sales Analysis</a></h2>
-						<p>Analyzing and addressing business inquiries using Pandas and Matplotlib with 12 months' worth of sales data from an electronics store. The dataset includes detailed records of purchases categorized by month, product type, cost, purchase address, and more.</p>
-					</header>
-					<a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="image main"><img src="images/SALES ANALYSIS IN PYTHON.jpg" alt="Sales Analysis in Python"></a>
-					<ul class="actions special">
-						<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Sales%20Analysis.ipynb" class="button large">View Project</a></li>
-					</ul>
-				</article>
-
-				<!-- Posts -->
 				<section class="posts">
 					<article>
 						<header>
@@ -96,6 +84,9 @@
 							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Covid%2019%20Portfolio%20Project.sql" class="button">View Project</a></li>
 						</ul>
 					</article>
+
+				<!-- Featured Post -->
+				<article class="post featured">
 					<article>
 						<header>
 							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb">Movie Correlation</a></h2>
@@ -106,6 +97,9 @@
 							<li><a href="https://github.com/Yatir1990/Portfolio/blob/main/Movies%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 						</ul>
 					</article>
+					
+				<!-- Featured Post -->
+				<article class="post featured">
 					<article>
 						<header>
 							<h2><a href="https://github.com/Yatir1990/Portfolio/blob/main/Bike-Sharing%20Portfolio%20Project.Rmd">Bike Sharing data Analysis</a></h2>
